Fix notification setting label width
The labels were fixed to a width that was too small for some
translations strings.

Closes https://community.openproject.org/work_packages/45163/activity

--- a/frontend/src/app/features/user-preferences/notifications-settings/page/notifications-settings-page.component.sass
+++ b/frontend/src/app/features/user-preferences/notifications-settings/page/notifications-settings-page.component.sass
@@ -13,7 +13,7 @@
     align-items: center
 
   &--label
-    flex: 0 0 100px
+    flex: 0 0 120px
     margin-bottom: 0
     @include text-shortener
 
